# wgpie

./: Cargo.toml  README.md
res/: sq.mtl
res/71-receptiondesk-1-obj/ReceptionDesk-1-OBJ/: Reception_Desk_1_obj.mtl
src/: lib.rs  model_renderer.rs  resources.rs  ui_scene.rs  ui_shader.wgsl
